--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,4 +18,4 @@ requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-slurp-prefixmaps = "prefixmaps.etl.etl_runner:cli"
+slurp-prefixmaps = "prefixmaps.ingest.etl_runner:cli"
