--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ PyYAML = "^6.0"
 pytest = "^5.2"
 bioregistry = "^0.5.54"
 linkml = "^1.3.1"
+curies = "^0.2.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
