--- a/src/prefixmaps/data/linked_data.curated.yaml
+++ b/src/prefixmaps/data/linked_data.curated.yaml
@@ -19,3 +19,4 @@ prefixes:
   qudt: http://qudt.org/schema/qudt/
   xsd: http://www.w3.org/2001/XMLSchema#
   shex: http://www.w3.org/ns/shex#
+  biolink: https://w3id.org/biolink/vocab/
