--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,9 +14,19 @@ bioregistry = "^0.5.54"
 linkml = "^1.3.1"
 curies = "^0.2.0"
 
+[tool.black]
+line-length = 100
+target-version = ["py39", "py310"]
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 slurp-prefixmaps = "prefixmaps.ingest.etl_runner:cli"
+
+[tool.isort]
+profile = "black"
+multi_line_output = 3
+include_trailing_comma = true
+reverse_relative = true
