--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ bioregistry = "^0.5.54"
 linkml = "^1.3.1"
 curies = "^0.2.0"
 
+[tool.poetry.extras]
+gilda = ["gilda"]
+
 [tool.black]
 line-length = 100
 target-version = ["py39", "py310"]
