--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pytest = "^5.2"
 bioregistry = "^0.5.54"
 linkml = "^1.3.1"
 curies = "^0.2.0"
+coverage = "^6.4.4"
 
 [tool.poetry.extras]
 gilda = ["gilda"]
