--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -83,7 +83,7 @@ jobs:
       #              run test suite   
       #----------------------------------------------
       - name: Run tests
-        run: poetry run -m unittest discover
+        run: poetry run python -m unittest discover
 
       #----------------------------------------------
       #              coverage report   
