--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,7 @@
 name = "prefixmaps"
 version = "0.1.0"
 description = ""
+readme = "README.md"
 authors = ["cmungall <cjm@berkeleybop.org>"]
 
 [tool.poetry.dependencies]
