--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,12 @@ coverage = "^6.4.4"
 
 [tool.poetry.extras]
 gilda = ["gilda"]
+docs = [
+    "sphinx",
+    "sphinx_rtd_theme",
+    "sphinx-autodoc-typehints",
+    "sphinx-click",
+    ]
 
 [tool.black]
 line-length = 100
