--- a/.github/workflows/doc_pages.yaml
+++ b/.github/workflows/doc_pages.yaml
@@ -1,6 +1,6 @@
 name: Sphinx Documentation
 on:
-  push:
+  pull_request:
     branches: [ main ]
 
 jobs:
@@ -34,7 +34,7 @@ jobs:
         cp -r datamodels/* ../gh-pages/
 
     - name: Deploy documentation.
-      if: ${{ github.event_name == 'push' }}
+      if: ${{ github.event_name == 'pull_request' }}
       uses: JamesIves/github-pages-deploy-action@v4.3.0
       with:
         branch: gh-pages
