--- a/.github/workflows/doc_pages.yaml
+++ b/.github/workflows/doc_pages.yaml
@@ -1,6 +1,7 @@
 name: Sphinx Documentation
 on:
-  pull_request:
+  workflow_dispatch:
+  push:
     branches: [ main ]
 
 jobs:
@@ -27,13 +28,14 @@ jobs:
       run: |
         mkdir gh-pages
         touch gh-pages/.nojekyll
+        poetry run make gendoc
         cd docs/
         poetry run sphinx-build -b html . _build
         cp -r _build/* ../gh-pages/
         cp -r datamodels/* ../gh-pages/
 
     - name: Deploy documentation.
-      if: ${{ github.event_name == 'pull_request' }}
+      if: ${{ github.event_name == 'push' }}
       uses: JamesIves/github-pages-deploy-action@v4.3.0
       with:
         branch: gh-pages
