coverage runs pytest

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -90,7 +90,7 @@ jobs:
       #----------------------------------------------
       - name: Generate coverage results
         run: |
-          poetry run coverage run python -m unittest discover
+          poetry run coverage run -m pytest
           poetry run coverage xml
           poetry run coverage report -m
 
