--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["cmungall <cjm@berkeleybop.org>"]
 [tool.poetry.dependencies]
 python = "^3.7.6"
 PyYAML = "^6.0"
+importlib-metadata = "^4.12.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
