--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ authors = ["cmungall <cjm@berkeleybop.org>"]
 
 [tool.poetry.dependencies]
 python = "^3.7.6"
-PyYAML = "^6.0"
+pyyaml = ">=5.3.1,<6.0.0"
 importlib-metadata = "^4.12.0"
 
 [tool.poetry.dev-dependencies]
