--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .idea
 .vscode
 __pycache__
+.pyc
 .ipynb_checkpoints/
 docs/_build/
 tests/output/
@@ -11,8 +12,6 @@ db/
 notebooks/output/*json
 notebooks/output/*tsv
 notebooks/input/go.db
-
-
 notebooks/api-key.txt
 
 .template.db
