--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ homepage = "https://github.com/linkml/prefixmaps"
 python = "^3.7.6"
 pyyaml = ">=5.3.1"
 importlib-metadata = "^4.12.0"
+typing-extensions = "^4.4.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
