--- a/.github/workflows/doc_pages.yaml
+++ b/.github/workflows/doc_pages.yaml
@@ -26,7 +26,7 @@ jobs:
 
     - name: Build documentation.
       run: |
-        pip install sphinx-rtd-theme
+        poetry run pip install sphinx-rtd-theme
         mkdir gh-pages
         touch gh-pages/.nojekyll
         cd docs/
