--- a/.github/workflows/doc_pages.yaml
+++ b/.github/workflows/doc_pages.yaml
@@ -1,7 +1,7 @@
 name: Sphinx Documentation
 on:
   workflow_dispatch:
-  push:
+  pull_request:
     branches: [ main ]
 
 jobs:
@@ -33,7 +33,7 @@ jobs:
         cp -r _build/* ../gh-pages/
 
     - name: Deploy documentation.
-      if: ${{ github.event_name == 'push' }}
+      if: ${{ github.event_name == 'pull_request' }}
       uses: JamesIves/github-pages-deploy-action@v4.4.1
       with:
         branch: gh-pages
