--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ sphinx-rtd-theme = {version = "^1.0.0", extras = ["docs"]}
 Sphinx = {version = "^5.3.0", extras = ["docs"]}
 sphinx-autodoc-typehints = {version = "^1.19.4", extras = ["docs"]}
 sphinx-click = {version = "^4.3.0", extras = ["docs"]}
+myst-parser = {version = "^0.18.1", extras = ["docs"]}
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
@@ -38,6 +39,7 @@ docs = [
     "sphinx-rtd-theme",
     "sphinx-autodoc-typehints",
     "sphinx-click",
+    "myst-parser"
     ]
 gilda = ["gilda"]
 
