Add bioportal to contexts

--- a/src/prefixmaps/data/contexts.curated.yaml
+++ b/src/prefixmaps/data/contexts.curated.yaml
@@ -24,7 +24,16 @@
   location: http://prefix.cc/context.jsonld
   comments:
     - prefix.cc is quite a messy source, it has many outdated expansions for OBO ontologies, lots of strange duplicates etc
-    - we recommend this is not used in isolatiom but is instead combined, lower in the priority order
+    - we recommend this is not used in isolation but is instead combined, lower in the priority order
+  semantic: true
+
+- name: bioportal
+  description: bioportal
+  comments:
+    - prefixes are specific to bioportal and may conflict with other contexts
+    - canonical, prefix_alias, and namespace_alias entries are present
+  format: linkml.yaml
+  location: bioportal.curated.yaml
   semantic: true
 
 - name: bioregistry
