Add refresh config

--- a/tox.ini
+++ b/tox.ini
@@ -33,6 +33,14 @@ commands =
     flake8 src/ tests/
 description = Run the flake8 tool with several plugins (bandit, docstrings, import order, pep8 naming).
 
+[testenv:refresh]
+description = Refresh the data in the prefixmaps package
+commands =
+    python -m prefixmaps.ingest.etl_runner
+usedevelop = true
+extras =
+    refresh
+
 #########################
 # Flake8 Configuration  #
 # (.flake8)             #
