--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ Sphinx = {version = "^5.3.0", extras = ["docs"]}
 sphinx-autodoc-typehints = {version = "^1.19.4", extras = ["docs"]}
 sphinx-click = {version = "^4.3.0", extras = ["docs"]}
 myst-parser = {version = "^0.18.1", extras = ["docs"]}
+click = "^8.1.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
@@ -42,6 +43,10 @@ docs = [
     "myst-parser"
     ]
 gilda = ["gilda"]
+refresh = [
+    "click",
+    "bioregistry"
+]
 
 [tool.black]
 line-length = 100
