--- a/.github/workflows/refresh.yml
+++ b/.github/workflows/refresh.yml
@@ -20,7 +20,7 @@ jobs:
         run: pip install tox tox-poetry
 
       - name: Create local changes
-        run: tox -e update
+        run: tox -e refresh
 
       - name: Commit local changes
         run: |
