--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,10 +26,12 @@ sphinx-autodoc-typehints = {version = "^1.19.4", extras = ["docs"]}
 sphinx-click = {version = "^4.3.0", extras = ["docs"]}
 myst-parser = {version = "^0.18.1", extras = ["docs"]}
 click = "^8.1.3"
+requests = {version = "^2.28.1", extras = ["refresh"]}
+bioregistry = {version = "<0.6.0", extras = ["refresh"]}
+rdflib = {version = "^6.2.0", extras = ["refresh"]}
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
-bioregistry = "^0.5.54"
 linkml = "^1.3.1"
 curies = "^0.3.0"
 coverage = "^6.4.4"
@@ -41,11 +43,11 @@ docs = [
     "sphinx-autodoc-typehints",
     "sphinx-click",
     "myst-parser"
-    ]
-gilda = ["gilda"]
+]
 refresh = [
-    "click",
-    "bioregistry"
+    "requests",
+    "bioregistry",
+    "rdflib"
 ]
 
 [tool.black]
