--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ sphinx-click = {version = "^4.3.0", extras = ["docs"]}
 myst-parser = {version = "^0.18.1", extras = ["docs"]}
 click = "^8.1.3"
 requests = {version = "^2.28.1", extras = ["refresh"]}
+# Anticipate bioregistry ^0.6.0 will require adaptation
 bioregistry = {version = "<0.6.0", extras = ["refresh"]}
 rdflib = {version = "^6.2.0", extras = ["refresh"]}
 
