--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ homepage = "https://github.com/linkml/prefixmaps"
 [tool.poetry.dependencies]
 python = "^3.7.6"
 pyyaml = ">=5.3.1"
+importlib-metadata = ">=1.0.0"
 sphinx-rtd-theme = {version = "^1.0.0", extras = ["docs"]}
 Sphinx = {version = "^5.3.0", extras = ["docs"]}
 sphinx-autodoc-typehints = {version = "^1.19.4", extras = ["docs"]}
