--- a/tox.ini
+++ b/tox.ini
@@ -61,6 +61,7 @@ ignore =
     S603 # subprocess call - check for execution of untrusted input.
     S607 # Starting a process with a partial executable path ["open" in both cases]
     S608 # Possible SQL injection vector through string-based query construction.
+    S113 # Requests timeout
 max-line-length = 120
 max-complexity = 13
 import-order-style = pycharm
