--- a/tox.ini
+++ b/tox.ini
@@ -19,6 +19,16 @@ commands =
     isort .
 description = Run linters.
 
+[testenv:lint-fix]
+deps =
+    black
+    ruff
+skip_install = true
+commands =
+    black src/ tests/
+    ruff --fix src/ tests/
+description = Run linters.
+
 [testenv:flake8]
 skip_install = true
 deps =
