--- a/.github/workflows/pypi-publish.yaml
+++ b/.github/workflows/pypi-publish.yaml
@@ -10,26 +10,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v2
 
     - name: Set up Python
-      uses: actions/setup-python@v3
+      uses: actions/setup-python@v2.2.2
       with:
         python-version: 3.9
 
     - name: Install Poetry
-      uses: snok/install-poetry@v1.3.1
-      with:
-        virtualenvs-create: true
-        virtualenvs-in-project: true
-
-    - name: Install dependencies
-      run: poetry install --no-interaction
+      run: |
+        pip install poetry
+        poetry self add "poetry-dynamic-versioning[plugin]"
 
     - name: Build source and wheel archives
-      run: |
-        poetry version $(git describe --tags --abbrev=0)
-        poetry build
+      run: poetry build
 
     - name: Publish distribution 📦 to PyPI
       uses: pypa/gh-action-pypi-publish@v1.2.2
