--- a/tox.ini
+++ b/tox.ini
@@ -45,11 +45,12 @@ description = Run the flake8 tool with several plugins (bandit, docstrings, impo
 
 [testenv:refresh]
 description = Refresh the data in the prefixmaps package
+skip_install = true
+allowlist_externals = poetry
+commands_pre =
+    poetry install --only main,refresh
 commands =
     python -m prefixmaps.ingest.etl_runner
-usedevelop = true
-extras =
-    refresh
 
 #########################
 # Flake8 Configuration  #
