--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,6 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.8",
-    "Programming Language :: Python :: 3.7",
 ]
 
 [tool.poetry.urls]
@@ -24,45 +23,32 @@ homepage = "https://github.com/linkml/prefixmaps"
 
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.8"
 pyyaml = ">=5.3.1"
-sphinx-rtd-theme = {version = "^1.0.0", extras = ["docs"]}
-Sphinx = {version = "^7.2.6", extras = ["docs"]}
-sphinx-autodoc-typehints = {version = "^1.23.4", extras = ["docs"]}
-sphinx-click = {version = "^4.3.0", extras = ["docs"]}
-myst-parser = {version = "^2.0.0", extras = ["docs"]}
-click = ">=8.1.3"
-requests = {version = "^2.28.1", extras = ["refresh"]}
-bioregistry = {version = "^0.10.65", extras = ["refresh"]}
-rdflib = {version = "^6.2.0", extras = ["refresh"]}
 curies = ">=0.5.3"
+
+[tool.poetry.group.test.dependencies]
+pytest = ">=6.2"
+coverage = ">=6.4.4"
 tox = "^4.11.3"
-pydantic = "^2.5"
+
+[tool.poetry.group.docs.dependencies]
+myst-parser = "*"
+sphinx = ">=7.0.0"
+sphinx-autodoc-typehints = "*"
+sphinx-click = "*"
+sphinx-rtd-theme = "*"
+
+[tool.poetry.group.refresh.dependencies]
+click = ">=8.1.3"
+requests = "^2.28.1"
+bioregistry = "^0.10.65"
+rdflib = "^6.2.0"
 
 [tool.poetry-dynamic-versioning]
 enable = true
 vcs = "git"
 style = "pep440"
-
-
-[tool.poetry.dev-dependencies]
-pytest = ">=6.2"
-coverage = ">=6.4.4"
-typing-extensions = ">=4.4.0"
-
-[tool.poetry.extras]
-docs = [
-    "sphinx",
-    "sphinx-rtd-theme",
-    "sphinx-autodoc-typehints",
-    "sphinx-click",
-    "myst-parser"
-]
-refresh = [
-    "requests",
-    "bioregistry",
-    "rdflib"
-]
 
 [tool.black]
 line-length = 100
