--- a/src/prefixmaps/data/linked_data.curated.yaml
+++ b/src/prefixmaps/data/linked_data.curated.yaml
@@ -1,5 +1,7 @@
 name: linkml
 prefixes:
+  rdf: http://www.w3.org/1999/02/22-rdf-syntax-ns#
+  rdfs: http://www.w3.org/2000/01/rdf-schema#
   linkml: https://w3id.org/linkml/
   dcterms: http://purl.org/dc/terms/
   skos: http://www.w3.org/2004/02/skos/core#
@@ -21,3 +23,5 @@ prefixes:
   shex: http://www.w3.org/ns/shex#
   biolink: https://w3id.org/biolink/vocab/
   foaf: http://xmlns.com/foaf/0.1/
+
+
