add NANDO: to curated prefix yaml to fix identifiers.org/NANDO/123 expansions

--- a/src/prefixmaps/data/linked_data.curated.yaml
+++ b/src/prefixmaps/data/linked_data.curated.yaml
@@ -23,5 +23,6 @@ prefixes:
   shex: http://www.w3.org/ns/shex#
   biolink: https://w3id.org/biolink/vocab/
   foaf: http://xmlns.com/foaf/0.1/
+  NANDO: "http://identifiers.org/NANDO:"
 
 
